Upgrading version
Removing Lombok and Mapstruct and upgrading for last Quarkus version and Java 17